update api-doc
